# FormForge

./: CONTRIBUTING.md  Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/db/: mod.rs
src/models/: check_radio.rs  form.rs  input.rs  mod.rs  option.rs  select.rs  textarea.rs  traits.rs  validate.rs
src/repository/: mod.rs  pipelines.rs
src/types/: mod.rs
src/types/validation/: checkbox.rs  color.rs  date.rs  datetimelocal.rs  email.rs  file.rs  mod.rs  month.rs  number.rs  password.rs  radio.rs  range.rs  tel.rs  text.rs  time.rs  url.rs  week.rs
src/urls/: forms.rs  inputs.rs  mod.rs  options.rs  selects.rs  textarea.rs  validate.rs
src/utils/: mod.rs
src/validation/: mod.rs
src/views/: forms.rs  inputs.rs  mod.rs  options.rs  selects.rs  textarea.rs  validate.rs
