[package]
name = "form_forge"
version = "0.1.0"
edition = "2021"
authors = [
    "Eugene Mark <eugenemarkke@gmail.com>"
]
description = "FormForge for creating dynamic form fields"
repository = "https://github.com/Eugene-Oluoch/FormForge"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
regex = "1"
mongodb = "2.4.0"
tokio = "1.27.0"
dotenv = "0.15.0"
chrono = "0.4.24"
futures = "0.3.28"


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]


[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
